package seedu.duke.project;

public enum Stat {
    NONE,
    TODO,
    PROJ,
    NEXT,
    WAIT,
    STRT,
    SOME,
    DONE
}
