package seedu.justbook;

public class Parser {
}
